[package]
name = "infrablockspace-runtime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
hex-literal = { version = "0.3.4", optional = true }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.139", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"
smallvec = "1.8.0"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
inherents = { package = "sp-inherents", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-session = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-version = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }

# FRAME
frame-support = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
frame-system = {git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
frame-executive = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
frame-benchmarking = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false, optional = true }
frame-try-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false, optional = true }

# Pallets
pallet-authorship = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-babe = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-balances = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-assets = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-transaction-payment = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-collective = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-democracy = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-grandpa = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-multisig = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-scheduler = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-session = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-timestamp = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-treasury = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }

# Primitives
runtime-common = { package = "infrablockspace-runtime-common", path = "../common", default-features = false }
runtime-parachains = { package = "infrablockspace-runtime-parachains", path = "../parachains", default-features = false }
primitives = { package = "infrablockspace-primitives", path = "../../primitives", default-features = false }
infrablockspace-runtime-constants = { package = "infrablockspace-runtime-constants", path = "./constants", default-features = false }

# XCM
xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
xcm-builder = { package = "xcm-builder", path = "../../xcm/xcm-builder", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-trie = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
serde_json = "1.0.81"
separator = "0.4.1"
remote-externalities = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", package = "frame-remote-externalities" }
tokio = { version = "1.24.2", features = ["macros"] }
sp-tracing = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-io/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"frame-support/std",
	"frame-executive/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-assets/std",
    "pallet-asset-tx-payment/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-grandpa/std",
	"pallet-multisig/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-babe/std",
	"sp-runtime/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"sp-version/std",
	"serde_derive",
	"serde/std",
	"log/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"frame-try-runtime/std",
	"pallet-xcm/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
]

# When enabled, the runtime API will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime API exported functions
# in WASM.
disable-runtime-api = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
	"sp-api/disable-logging",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

runtime-metrics = ["runtime-parachains/runtime-metrics"]

