[package]
name = "cumulus-primitives-utility"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.17", default-features = false }

# Substrate
frame-support = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

# infrablockspace
infrablockspace-runtime-common = { package = "infrablockspace-runtime-common", path = "../../runtime/common", default-features = false }
xcm = { package = "xcm", path = "..", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../xcm-executor", default-features = false }
xcm-builder = { package = "xcm-builder", path = "../xcm-builder", default-features = false }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"infrablockspace-runtime-common/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]
