[package]
name = "infrablockspace-node-core-approval-voting"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
futures-timer = "3.0.2"
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["bit-vec", "derive"] }
gum = { package = "tracing-gum", path = "../../gum" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
lru = "0.9"
merlin = "2.0"
schnorrkel = "0.9.1"
kvdb = "0.13.0"
derive_more = "0.99.17"
thiserror = "1.0.31"

infrablockspace-node-subsystem = { path = "../../subsystem" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
infrablockspace-overseer = { path = "../../overseer" }
infrablockspace-primitives = { path = "../../../primitives" }
infrablockspace-node-primitives = { path = "../../primitives" }
polkadot-node-jaeger = { path = "../../jaeger" }

sc-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-consensus-slots = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-application-crypto = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false, features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }

[dev-dependencies]
async-trait = "0.1.57"
parking_lot = "0.12.0"
rand_core = "0.6.4" #                                                                       should match schnorrkel
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
kvdb-memorydb = "0.13.0"
test-helpers = { package = "infrablockspace-primitives-test-helpers", path = "../../../primitives/test-helpers" }
