[package]
name = "infrablockspace-node-core-av-store"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
futures-timer = "3.0.2"
kvdb = "0.13.0"
thiserror = "1.0.31"
gum = { package = "tracing-gum", path = "../../gum" }
bitvec = "1.0.0"

parity-scale-codec = { version = "3.3.0", features = ["derive"] }
erasure = { package = "erasure-coding", path = "../../../erasure-coding" }
infrablockspace-node-subsystem = {path = "../../subsystem" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
infrablockspace-overseer = { path = "../../overseer" }
infrablockspace-primitives = { path = "../../../primitives" }
infrablockspace-node-primitives = { path = "../../primitives" }
sp-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }

[dev-dependencies]
log = "0.4.17"
env_logger = "0.10.0"
assert_matches = "1.4.0"
kvdb-memorydb = "0.13.0"

sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
parking_lot = "0.12.0"
test-helpers = { package = "infrablockspace-primitives-test-helpers", path = "../../../primitives/test-helpers" }
