[package]
name = "infrablockspace-node-core-backing"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
infrablockspace-primitives = { path = "../../../primitives" }
infrablockspace-node-primitives = { path = "../../primitives" }
infrablockspace-node-subsystem = { path = "../../subsystem" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
erasure-coding = { package = "erasure-coding", path = "../../../erasure-coding" }
statement-table = { package = "infrablockspace-statement-table", path = "../../../statement-table" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
gum = { package = "tracing-gum", path = "../../gum" }
thiserror = "1.0.31"
fatality = "0.0.6"

[dev-dependencies]
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-tracing = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
futures = { version = "0.3.21", features = ["thread-pool"] }
assert_matches = "1.4.0"
infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
test-helpers = { package = "infrablockspace-primitives-test-helpers", path = "../../../primitives/test-helpers" }
