[package]
name = "infrablockspace-node-core-bitfield-signing"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
infrablockspace-primitives = { path = "../../../primitives" }
infrablockspace-node-subsystem = { path = "../../subsystem" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
wasm-timer = "0.2.5"
thiserror = "1.0.31"

[dev-dependencies]
infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
test-helpers = { package = "infrablockspace-primitives-test-helpers", path = "../../../primitives/test-helpers" }
