[package]
name = "infrablockspace-node-core-candidate-validation"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
futures-timer = "3.0.2"
gum = { package = "tracing-gum", path = "../../gum" }

sp-maybe-compressed-blob = { package = "sp-maybe-compressed-blob", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
parity-scale-codec = { version = "3.3.0", default-features = false, features = [
    "bit-vec",
    "derive",
] }

infrablockspace-primitives = { path = "../../../primitives" }
infrablockspace-parachain = { path = "../../../parachain" }
infrablockspace-node-primitives = { path = "../../primitives" }
infrablockspace-node-subsystem = { path = "../../subsystem" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
infrabs-node-metrics = { path = "../../metrics" }

[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
infrablockspace-node-core-pvf = { path = "../pvf" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
futures = { version = "0.3.21", features = ["thread-pool"] }
assert_matches = "1.4.0"
infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
test-helpers = { package = "infrablockspace-primitives-test-helpers", path = "../../../primitives/test-helpers" }
