[package]
name = "infrablockspace-node-core-chain-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
sp-blockchain = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
infrablockspace-primitives = { path = "../../../primitives" }
infrabs-node-metrics = { path = "../../metrics" }
infrablockspace-node-subsystem = {path = "../../subsystem" }
sc-client-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-consensus-babe = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

[dev-dependencies]
futures = { version = "0.3.21", features = ["thread-pool"] }
maplit = "1.0.2"
parity-scale-codec = "3.3.0"
infrablockspace-node-primitives = { path = "../../primitives" }
infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
