[package]
name = "infrablockspace-node-core-parachains-inherent"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
futures-timer = "3.0.2"
gum = { package = "tracing-gum", path = "../../gum" }
thiserror = "1.0.31"
async-trait = "0.1.57"
infrablockspace-node-subsystem = { path = "../../subsystem" }
infrablockspace-overseer = { path = "../../overseer" }
infrablockspace-primitives = { path = "../../../primitives" }
sp-blockchain = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-inherents = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
