[package]
name = "infrablockspace-node-core-pvf-checker"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
thiserror = "1.0.31"
gum = { package = "tracing-gum", path = "../../gum" }

infrablockspace-node-primitives = { path = "../../primitives" }
infrablockspace-node-subsystem = { path = "../../subsystem" }
infrablockspace-primitives = { path = "../../../primitives" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
infrablockspace-overseer = { path = "../../overseer" }

sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

[dev-dependencies]
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers"}
test-helpers = { package = "infrablockspace-primitives-test-helpers", path = "../../../primitives/test-helpers" }
sp-application-crypto = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
futures-timer = "3.0.2"
