[package]
name = "infrablockspace-node-core-runtime-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
lru = "0.9"

sp-consensus-babe = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

infrablockspace-primitives = { path = "../../../primitives" }
infrablockspace-node-metrics = { path = "../../metrics" }
infrablockspace-node-subsystem = { path = "../../subsystem" }
infrablockspace-node-subsystem-types = { path = "../../subsystem-types" }

[dev-dependencies]
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-authority-discovery = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
futures = { version = "0.3.21", features = ["thread-pool"] }
infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
infrablockspace-node-primitives = { path = "../../primitives" }
test-helpers = { package = "infrablockspace-primitives-test-helpers", path = "../../../primitives/test-helpers" }
