[package]
name = "infrablockspace-availability-distribution"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
parity-scale-codec = { version = "3.3.0", features = ["std"] }
infrablockspace-primitives = { path = "../../../primitives" }
erasure-coding = { path = "../../../erasure-coding" }
infrablockspace-node-network-protocol = { path = "../../network/protocol" }
infrablockspace-node-subsystem = { path = "../../subsystem" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
infrablockspace-node-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", features = ["std"] }
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
thiserror = "1.0.31"
rand = "0.8.5"
derive_more = "0.99.17"
lru = "0.9.0"
fatality = "0.0.6"

[dev-dependencies]
infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", features = ["std"] }
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-tracing = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
futures-timer = "3.0.2"
assert_matches = "1.4.0"
infrablockspace-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
