[package]
name = "infrablockspace-availability-recovery"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
lru = "0.9.0"
rand = "0.8.5"
fatality = "0.0.6"
thiserror = "1.0.31"
gum = { package = "tracing-gum", path = "../../gum" }

erasure-coding = { path = "../../../erasure-coding" }
infrablockspace-primitives = { path = "../../../primitives" }
infrablockspace-node-primitives = { path = "../../primitives" }
infrablockspace-node-subsystem = {path = "../../subsystem" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
infrablockspace-node-network-protocol = { path = "../../network/protocol" }
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive"] }
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

[dev-dependencies]
assert_matches = "1.4.0"
env_logger = "0.9.0"
futures-timer = "3.0.2"
log = "0.4.17"

sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
infrablockspace-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
