[package]
name = "infrablockspace-availability-bitfield-distribution"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
infrablockspace-primitives = { path = "../../../primitives" }
infrablockspace-node-subsystem = {path = "../../subsystem" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
infrablockspace-node-network-protocol = { path = "../../network/protocol" }
rand = "0.8"

[dev-dependencies]
infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-authority-discovery = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
maplit = "1.0.2"
log = "0.4.17"
env_logger = "0.10.0"
assert_matches = "1.4.0"
rand_chacha = "0.3.1"
