[package]
name = "infrablockspace-network-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
always-assert = "0.1"
async-trait = "0.1.57"
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
infrablockspace-primitives = { path = "../../../primitives" }
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive"] }
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network-common = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
infrablockspace-node-metrics = { path = "../../metrics" }
infrablockspace-node-network-protocol = { path = "../protocol" }
infrablockspace-node-subsystem = { path = "../../subsystem" }
infrablockspace-overseer = { path = "../../overseer" }
parking_lot = "0.12.0"
bytes = "1"
fatality = "0.0.6"
thiserror = "1"

[dev-dependencies]
assert_matches = "1.4.0"
infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
futures-timer = "3"
infrablockspace-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
