[package]
name = "infrablockspace-collator-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
always-assert = "0.1.2"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
futures = "0.3.21"
futures-timer = "3"
gum = { package = "tracing-gum", path = "../../gum" }

sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

infrablockspace-primitives = { path = "../../../primitives" }
infrablockspace-node-network-protocol = { path = "../../network/protocol" }
infrablockspace-node-primitives = { path = "../../primitives" }
infrablockspace-node-subsystem-util = { path = "../../subsystem-util" }
infrablockspace-node-subsystem = {path = "../../subsystem" }
fatality = "0.0.6"
thiserror = "1.0.31"

[dev-dependencies]
log = "0.4.17"
env_logger = "0.9.0"
assert_matches = "1.4.0"

sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", features = ["std"] }
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
parity-scale-codec = { version = "3.3.0", features = ["std"] }

infrablockspace-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
infrablockspace-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
